--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "homepage": "https://github.com/mjrouser/unbury.us",
   "authors": [
-    "mjrouser <matthew@mjrouser.com>"
+    "mjrouser <matthew@mjrouser.com>",
+    "powpow12 <rob_p_powell@yahoo.com>"
   ],
   "description": "loan calulator",
   "moduleType": [
@@ -21,6 +22,7 @@
   ],
   "dependencies": {
     "angular": "~1.4.3",
-    "materialize": "~0.97.0"
+    "materialize": "~0.97.0",
+    "jquery" : "~2.1.0"
   }
 }
