added bower modules and started transition to materialize

--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,11 @@
   ],
   "dependencies": {
     "angular": "~1.4.3",
-    "materialize": "~0.97.0"
+    "materialize": "~0.97.0",
+    "d3": "~3.5.6",
+    "c3": "~0.4.10"
+  },
+  "resolutions": {
+    "d3": "~3.5.6"
   }
 }
